<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_id" translatable="false">ca-app-pub-6978053805119593~2904956752</string>
    <string name="ad_id" translatable="false">ca-app-pub-6978053805119593/1424709345</string>


    <string name="app_name">LWM Help</string>
    <string name="nav_about">About game</string>
    <string name="nav_faq">F.A.Q.</string>
    <string name="nav_your_help">Your help</string>
    <string name="nav_traffic">Traffic</string>
    <string name="nav_game_rules">Game rules</string>
    <string name="page_about" formatted="false">file:///android_asset/about_en.html</string>
    <string name="nav_general_rules">General rules</string>
    <string name="nav_chat_rules">Chat rules</string>
    <string name="nav_forum_rules">Forum rules</string>
    <string name="nav_arts">Artifacts</string>
    <string name="nav_card_game">Card game</string>
    <string name="nav_castle_construct">Castle constructions</string>
    <string name="nav_character">Character</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_combat_conduct">Combat conduction</string>
    <string name="nav_combat_managment">Combat management</string>
    <string name="nav_battle_quests">Combat quests</string>
    <string name="nav_control_panel">Control panel</string>
    <string name="nav_damage_heal">Rules of damage and healing</string>
    <string name="nav_estate">Real estate</string>
    <string name="nav_est_depo">Estates and Depositories</string>
    <string name="nav_exp">Experience tables</string>
    <string name="nav_factions">Factions</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_guilds">Guilds</string>
    <string name="nav_heros_action">Hero\'s actions</string>
    <string name="nav_ingame_communication">Communication in game</string>
    <string name="nav_initiative_bar">Initiative bar</string>
    <string name="nav_luck_morale">Luck and morale</string>
    <string name="nav_market">Market</string>
    <string name="nav_medals">Insignia</string>
    <string name="nav_pm">Private mail</string>
    <string name="nav_prod_work">Production works</string>
    <string name="nav_quests">Quests</string>
    <string name="nav_recruiting">Recruiting</string>
    <string name="nav_roulette">Roulette</string>
    <string name="nav_sets">Sets</string>
    <string name="nav_skill_abilities">Skills and abilities</string>
    <string name="nav_special_abilities">Special abilities</string>
    <string name="nav_spells">Spells</string>
    <string name="nav_statistic">Statistics</string>
    <string name="nav_stat_prot">Statistics and logs</string>
    <string name="nav_text_quests">Text quests</string>
    <string name="nav_tournaments">Tournaments</string>
    <string name="nav_troops_settlement">Troops settlement</string>
    <string name="nav_unique">Unique racial abilities</string>
    <string name="page_news">https://ruslkochnev.github.io/news.html</string>
    <string name="nav_news_hot">News</string>
    <string name="page_your_help">file:///android_asset/your_help_en.html</string>
    <string name="page_faq">file:///android_asset/faq_en.html</string>
    <string name="page_traffic">file:///android_asset/traffic_en.html</string>
    <string name="page_game_rules">file:///android_asset/game_rules_en.html</string>
    <string name="page_general_rules">file:///android_asset/general_rules_en.html</string>
    <string name="page_forum_rules">file:///android_asset/forum_rules_en.html</string>
    <string name="page_chat_rules">file:///android_asset/chat_rules_en.html</string>
    <string name="page_arts">file:///android_asset/arts_en.html</string>
    <string name="page_castle_construct">file:///android_asset/castle_construct_en.html</string>
    <string name="page_character">file:///android_asset/character_en.html</string>
    <string name="page_est_depo">file:///android_asset/est_depos_en.html</string>
    <string name="page_estate">file:///android_asset/real_estate_en.html</string>
    <string name="page_exp">file:///android_asset/exp_table_en.html</string>
    <string name="page_factions">file:///android_asset/factions_en.html</string>
    <string name="page_guilds">file:///android_asset/guilds_en.html</string>
    <string name="page_market">file:///android_asset/market_en.html</string>
    <string name="page_medals">file:///android_asset/insignia_en.html</string>
    <string name="page_prod_work">file:///android_asset/prod_works_en.html</string>
    <string name="page_sets">file:///android_asset/sets_en.html</string>
    <string name="page_skill_abilities">file:///android_asset/skills_abilities_en.html</string>
    <string name="page_stat_prot">file:///android_asset/stat_n_logs_en.html</string>
    <string name="page_statistic">file:///android_asset/stats_en.html</string>
    <string name="page_unique">file:///android_asset/unique_race_en.html</string>
    <string name="page_battle_quests">file:///android_asset/battle_quests_en.html</string>
    <string name="page_card_game">file:///android_asset/card_game_en.html</string>
    <string name="page_chat">file:///android_asset/chat_en.html</string>
    <string name="page_combat_conduct">file:///android_asset/combat_conduct_ru.html</string>
    <string name="page_combat_managment">file:///android_asset/combat_managment_en.html</string>
    <string name="page_control_panel">file:///android_asset/control_panel_en.html</string>
    <string name="page_damage_heal">file:///android_asset/damage_heal_en.html</string>
    <string name="page_forum">file:///android_asset/forum_en.html</string>
    <string name="page_heros_action">file:///android_asset/heros_action_en.html</string>
    <string name="page_ingame_communication">file:///android_asset/ingame_communication_en.html</string>
    <string name="page_initiative_bar">file:///android_asset/initiative_bar_en.html</string>
    <string name="page_luck_morale">file:///android_asset/luck_morale_en.html</string>
    <string name="page_pm">file:///android_asset/pm_en.html</string>
    <string name="page_quests">file:///android_asset/quests_en.html</string>
    <string name="page_recruiting">file:///android_asset/recruiting_en.html</string>
    <string name="page_roulette">file:///android_asset/roulette_en.html</string>
    <string name="page_special_abilities">file:///android_asset/special_abilities_en.html</string>
    <string name="page_spells">file:///android_asset/spells_en.html</string>
    <string name="page_text_quests">file:///android_asset/text_quests_en.html</string>
    <string name="page_tournaments">file:///android_asset/tournaments_en.html</string>
    <string name="page_troops_settlement">file:///android_asset/troops_settlement_en.html</string>
    <string name="send_feedback" translatable="false">feedback</string>


    <string name="toastMsgExit">Click again to exit</string>


    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="send_about" translatable="false">about</string>
    <string name="about_me">Hello! My name is Ruslan, I live in St. Petersburg. I am an indie app
        developer for Android. I present to you the application for our favorite game,
        «Heroes of War and Money». Above there are links to my page in VK, my referral link in the LWM
        and to the developer\'s profile in Google Play, where you can familiarize yourself with my
        other applications and, if you wish, support the developer :)</string>
    <string name="about_bar">About me</string>
    <string name="hwm_reflink" translatable="false">http://www.heroeswm.ru/?rid=692098</string>
    <string name="gmail_link" translatable="false">mailto:ruslkochnev@gmail.com</string>
    <string name="email_body">Hello!</string>
    <string name="email_head">Feedback from LWM Help app</string>
    <string name="vk_link" translatable="false">https://vk.com/sparkysparkybooman</string>
    <string name="gp_link" translatable="false">https://play.google.com/store/apps/dev?id=7828901610757597354</string>


</resources>
